@@ -1,4 +1,3 @@
 from zope.i18nmessageid import MessageFactory
 
 messageFactory = MessageFactory('collective.simplemanagement')
-
